testsuite/tests/rename/should_fail/T19843j.hs
module T19843j where

import Control.Monad (sequence)

x = guard
