testsuite/tests/rename/should_fail/T19843j.stderr

T19843j.hs:5:5: error: [GHC-88464]
    Variable not in scope: guard
    Suggested fix:
      Add ‘guard’ to the import list in the import of ‘Control.Monad’
      (at T19843j.hs:3:1-31).
